# rust-simplefs

./: Cargo.toml
.github/workflows/: cargo-build.yaml
src/: lib.rs
