[package]
name = "simplefs"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { git = "https://github.com/rblaze/embedded-bytes.git", default-features = false }
# simplefs-builder dependencies
anyhow = { version = "1.0", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
quickcheck = { version = "1.0" }

[features]
builder-binary = ["anyhow", "bytes/std", "clap"]

[[bin]]
name = "simplefs-builder"
path = "src/bin/main.rs"
required-features = ["builder-binary"]
